crates/wac-parser/tests/parser/fail/empty-enum.wac
package test:comp;

enum e {}